--- a/ARM/Production/OP_Production_Orders_Planner.resx
+++ b/ARM/Production/OP_Production_Orders_Planner.resx
@@ -237,7 +237,7 @@
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>48</value>
   </metadata>
-  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="OP_Production_Orders_Planner.IconOptions.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAYAyMgAAAEAIAAIhwIAZgAAAEBAAAABACAAKEIAAG6HAgAwMAAAAQAgAKglAACWyQIAICAAAAEA
         IACoEAAAPu8CABgYAAABACAAiAkAAOb/AgAQEAAAAQAgAGgEAABuCQMAKAAAAMgAAACQAQAAAQAgAAAA
